--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-amazing-ui",
+  "name": "eh-antdesign-ui",
   "version": "0.1.36",
   "private": false,
   "type": "module",
@@ -8,16 +8,16 @@
     "package.json",
     "README.md"
   ],
-  "main": "./dist/vue-amazing-ui.umd.cjs",
-  "module": "./dist/vue-amazing-ui.js",
-  "browser": "./dist/vue-amazing-ui.js",
-  "unpkg": "dist/vue-amazing-ui.iife.js",
+  "main": "./dist/eh-antdesign-ui.umd.cjs",
+  "module": "./dist/eh-antdesign-ui.js",
+  "browser": "./dist/eh-antdesign-ui.js",
+  "unpkg": "dist/eh-antdesign-ui.iife.js",
   "exports": {
     "./dist/style.css": "./dist/style.css",
     "./css": "./dist/style.css",
     ".": {
-      "import": "./dist/vue-amazing-ui.js",
-      "require": "./dist/vue-amazing-ui.umd.cjs"
+      "import": "./dist/eh-antdesign-ui.js",
+      "require": "./dist/eh-antdesign-ui.umd.cjs"
     }
   },
   "scripts": {
@@ -73,7 +73,7 @@
   "description": "An Amazing Vue3 UI Components Library.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/themusecatcher/vue-amazing-ui.git"
+    "url": "git+https://github.com/zhaoyifan-admin/eh-antdesign-ui.git"
   },
   "keywords": [
     "Vue3",
@@ -88,9 +88,9 @@
   "author": "theMuseCatcher",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/themusecatcher/vue-amazing-ui/issues"
+    "url": "https://github.com/zhaoyifan-admin/eh-antdesign-ui/issues"
   },
-  "homepage": "https://themusecatcher.github.io/vue-amazing-ui",
+  "homepage": "https://zhaoyifan-admin.github.io/eh-antdesign-ui/",
   "browserslist": [
     "> 1%",
     "last 2 versions",
