--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "packages/**/*.ts", "packages/**/*.vue"],
   "compilerOptions": {
+    "module": "esnext",
     "ignoreDeprecations": "5.0",
     "isolatedModules": true,
     "baseUrl": ".",
