--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "@vuepic/vue-datepicker": "7.4.1",
     "@vueuse/core": "^10.8.0",
     "@vueuse/integrations": "^10.8.0",
+    "amfe-flexible": "^2.2.1",
     "ant-design-vue": "^4.1.2",
     "core-js": "^3.36.0",
     "date-fns": "^3.3.1",
     "naive-ui": "^2.38.0",
+    "postcss-pxtorem": "^6.1.0",
     "qrcode": "^1.5.3",
     "swiper": "^11.0.6",
     "vue": "^3.4.19",
@@ -65,8 +67,11 @@
     "rimraf": "^5.0.5",
     "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.3.3",
+    "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.1.4",
+    "vite-plugin-restart": "^0.4.0",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vitepress": "^1.0.1",
     "vue-tsc": "^2.0.6"
   },
